team members popup

--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./assets/css/all.min.css" />
     <link rel="stylesheet" href="./assets/css/tailwind.css" />
     <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/css/fancybox.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
@@ -15,7 +18,7 @@
     />
     <title>Equity Afia</title>
   </head>
-  <body>
+  <body class="relative">
     <!--Accesibility Button-->
     <button id="accesibility-btn">
       <img
@@ -230,7 +233,6 @@
       </section>
 
       <!--Core Values Section-->
-      <!-- Core Values Section -->
       <section id="core-values">
         <img
           src="./assets/images/core-values-bg.jfif"
@@ -440,6 +442,252 @@
           /></a>
         </div>
       </section>
+
+      <section class="team-members-section">
+        <div class="team-members-container">
+          <div class="team-members-grid">
+            <!-- Team Member 1 -->
+            <div class="team-member-item">
+              <a
+                data-fancybox="team-members"
+                data-src="#team-member-1"
+                href="javascript:;"
+                class="team-member-link"
+              >
+                <img
+                  src="./assets/images/Dr.-Evans-Baiya.jpg"
+                  alt="Prof. Isaac Macharia"
+                  class="team-member-image"
+                />
+                <div class="team-member-info">
+                  <h3 class="team-member-name">PROF. ISAAC MACHARIA</h3>
+                  <p class="team-member-title">NON-EXECUTIVE CHAIRMAN</p>
+                </div>
+              </a>
+
+              <div
+                style="display: none"
+                id="team-member-1"
+                class="team-member-popup"
+              >
+                <div class="popup-header">
+                  <img
+                    src="./assets/images/Dr.-Evans-Baiya.jpg"
+                    alt="Prof. Isaac Macharia"
+                    class="popup-image"
+                  />
+                  <div class="popup-header-info">
+                    <h2 class="popup-name">PROF. ISAAC MACHARIA</h2>
+                    <p class="popup-title">NON-EXECUTIVE CHAIRMAN</p>
+                  </div>
+                </div>
+                <div class="popup-bio">
+                  <p>
+                    Professor Isaac Macharia is a distinguished academic and
+                    business leader with extensive experience in corporate
+                    governance. He has served in various leadership positions in
+                    both public and private institutions.
+                  </p>
+                  <p>
+                    With a background in medicine and business administration,
+                    Prof. Macharia brings a unique perspective to the boardroom.
+                    He has been instrumental in guiding the organization's
+                    strategic direction and ensuring strong corporate governance
+                    practices.
+                  </p>
+                  <p>
+                    Prof. Macharia has received numerous accolades for his
+                    contributions to both the academic and business communities
+                    in Kenya and across East Africa.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Team Member 2 -->
+            <div class="team-member-item">
+              <a
+                data-fancybox="team-members"
+                data-src="#team-member-2"
+                href="javascript:;"
+                class="team-member-link"
+              >
+                <img
+                  src="./assets/images/Dr.-Evans-Baiya.jpg"
+                  alt="Dr. James Mwangi"
+                  class="team-member-image"
+                />
+                <div class="team-member-info">
+                  <h3 class="team-member-name">DR. JAMES MWANGI, CBS</h3>
+                  <p class="team-member-title">
+                    GROUP MANAGING DIRECTOR AND CHIEF EXECUTIVE OFFICER
+                  </p>
+                </div>
+              </a>
+
+              <div
+                style="display: none"
+                id="team-member-2"
+                class="team-member-popup"
+              >
+                <div class="popup-header">
+                  <img
+                    src="./assets/images/Dr.-Evans-Baiya.jpg"
+                    alt="Dr. James Mwangi"
+                    class="popup-image"
+                  />
+                  <div class="popup-header-info">
+                    <h2 class="popup-name">DR. JAMES MWANGI, CBS</h2>
+                    <p class="popup-title">
+                      GROUP MANAGING DIRECTOR AND CHIEF EXECUTIVE OFFICER
+                    </p>
+                  </div>
+                </div>
+                <div class="popup-bio">
+                  <p>
+                    James holds five honorary doctorate degrees in recognition
+                    of his positive impact on the Kenyan society. He holds a
+                    Bachelor of Commerce degree and is a Certified Public
+                    Accountant. He has been honored thrice with National
+                    Presidential Awards: The First Class Chief of the Order of
+                    the Burning Spear (CBS), the Moran of the Burning Spear
+                    (MBS) and Head of State Commendation (HSC).
+                  </p>
+                  <p>
+                    On the global front, he has won several awards including the
+                    G8 Global Vision Award, 2007. He was named among the Top 50
+                    Emerging Market Business Leaders and the 20 most influential
+                    people in Africa in 2011; the World Entrepreneur of the Year
+                    by Ernst & Young in 2012; the Forbes Africa Person of the
+                    Year in 2012 and was recently named in the Bloomberg 50 list
+                    of people who defined 2019 globally. He is an honoree of the
+                    2020 Oslo Business for Peace Award, the Nobel Prize for
+                    business.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Team Member 3 -->
+            <div class="team-member-item">
+              <a
+                data-fancybox="team-members"
+                data-src="#team-member-3"
+                href="javascript:;"
+                class="team-member-link"
+              >
+                <img
+                  src="./assets/images/Dr.-Evans-Baiya.jpg"
+                  alt="Jonas Mushosho"
+                  class="team-member-image"
+                />
+                <div class="team-member-info">
+                  <h3 class="team-member-name">JONAS MUSHOSHO</h3>
+                  <p class="team-member-title">NON-EXECUTIVE DIRECTOR</p>
+                </div>
+              </a>
+
+              <div
+                style="display: none"
+                id="team-member-3"
+                class="team-member-popup"
+              >
+                <div class="popup-header">
+                  <img
+                    src="./assets/images/Dr.-Evans-Baiya.jpg"
+                    alt="Jonas Mushosho"
+                    class="popup-image"
+                  />
+                  <div class="popup-header-info">
+                    <h2 class="popup-name">JONAS MUSHOSHO</h2>
+                    <p class="popup-title">NON-EXECUTIVE DIRECTOR</p>
+                  </div>
+                </div>
+                <div class="popup-bio">
+                  <p>
+                    Jonas Mushosho brings extensive experience in corporate
+                    governance and strategic leadership to the board. With a
+                    background in finance and business management, he has served
+                    on numerous boards across various industries.
+                  </p>
+                  <p>
+                    His expertise in risk management and corporate strategy has
+                    been invaluable in guiding the organization through periods
+                    of growth and transformation. Mr. Mushosho is known for his
+                    keen analytical skills and ability to identify emerging
+                    market trends.
+                  </p>
+                  <p>
+                    Prior to his current role, he held senior executive
+                    positions in several multinational corporations, where he
+                    was responsible for driving operational excellence and
+                    sustainable growth.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Team Member 4 -->
+            <div class="team-member-item">
+              <a
+                data-fancybox="team-members"
+                data-src="#team-member-4"
+                href="javascript:;"
+                class="team-member-link"
+              >
+                <img
+                  src="./assets/images/Dr.-Evans-Baiya.jpg"
+                  alt="Dr. Evans Baiya"
+                  class="team-member-image"
+                />
+                <div class="team-member-info">
+                  <h3 class="team-member-name">DR. EVANS BAIYA</h3>
+                  <p class="team-member-title">NON-EXECUTIVE DIRECTOR</p>
+                </div>
+              </a>
+
+              <div
+                style="display: none"
+                id="team-member-4"
+                class="team-member-popup"
+              >
+                <div class="popup-header">
+                  <img
+                    src="./assets/images/Dr.-Evans-Baiya.jpg"
+                    alt="Dr. Evans Baiya"
+                    class="popup-image"
+                  />
+                  <div class="popup-header-info">
+                    <h2 class="popup-name">DR. EVANS BAIYA</h2>
+                    <p class="popup-title">NON-EXECUTIVE DIRECTOR</p>
+                  </div>
+                </div>
+                <div class="popup-bio">
+                  <p>
+                    Dr. Evans Baiya is a technology and innovation expert with a
+                    distinguished career spanning both academia and industry. He
+                    holds a PhD in Electrical Engineering and has been at the
+                    forefront of technological innovation in Africa.
+                  </p>
+                  <p>
+                    His expertise in digital transformation and emerging
+                    technologies has been instrumental in guiding the
+                    organization's technology strategy. Dr. Baiya is passionate
+                    about leveraging technology to drive financial inclusion and
+                    economic development.
+                  </p>
+                  <p>
+                    In addition to his board responsibilities, Dr. Baiya is a
+                    sought-after speaker and advisor on technology and
+                    innovation matters, and has published extensively in his
+                    field.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
@@ -621,7 +869,7 @@
     <script src="./assets/js/all.min.js"></script>
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/swiper-bundle.min.js"></script>
-    <script src="./assets/js/fancybox.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="./assets/js/main.js"></script>
 
     <!--Search Functionality-->
@@ -638,6 +886,20 @@
             },
           ]);
         });
+    </script>
+
+    <script>
+      $(document).ready(function () {
+        // Initialize fancybox
+        $('[data-fancybox="team-members"]').fancybox({
+          baseClass: "team-members-fancybox",
+          infobar: false,
+          arrows: false,
+          smallBtn: true,
+          toolbar: false,
+          slideClass: "team-member-slide",
+        });
+      });
     </script>
   </body>
 </html>
