leadership page added

--- a/about.html
+++ b/about.html
@@ -444,7 +444,7 @@
       </section>
 
       <section class="team-members-section">
-        <div class="team-members-container">
+        <div class="container">
           <div class="team-members-grid">
             <!-- Team Member 1 -->
             <div class="team-member-item">
@@ -460,8 +460,8 @@
                   class="team-member-image"
                 />
                 <div class="team-member-info">
-                  <h3 class="team-member-name">PROF. ISAAC MACHARIA</h3>
-                  <p class="team-member-title">NON-EXECUTIVE CHAIRMAN</p>
+                  <h3 class="team-member-name">Prof. Isaac Macharia</h3>
+                  <p class="team-member-title">Executive Chairman</p>
                 </div>
               </a>
 
@@ -518,10 +518,8 @@
                   class="team-member-image"
                 />
                 <div class="team-member-info">
-                  <h3 class="team-member-name">DR. JAMES MWANGI, CBS</h3>
-                  <p class="team-member-title">
-                    GROUP MANAGING DIRECTOR AND CHIEF EXECUTIVE OFFICER
-                  </p>
+                  <h3 class="team-member-name">Dr. James Mwangi, CBS</h3>
+                  <p class="team-member-title">Group Managing Director</p>
                 </div>
               </a>
 
@@ -582,8 +580,8 @@
                   class="team-member-image"
                 />
                 <div class="team-member-info">
-                  <h3 class="team-member-name">JONAS MUSHOSHO</h3>
-                  <p class="team-member-title">NON-EXECUTIVE DIRECTOR</p>
+                  <h3 class="team-member-name">Jonas Mushosho</h3>
+                  <p class="team-member-title">Non-Executive Director</p>
                 </div>
               </a>
 
@@ -641,8 +639,8 @@
                   class="team-member-image"
                 />
                 <div class="team-member-info">
-                  <h3 class="team-member-name">DR. EVANS BAIYA</h3>
-                  <p class="team-member-title">NON-EXECUTIVE DIRECTOR</p>
+                  <h3 class="team-member-name">Dr. Evans Baiya</h3>
+                  <p class="team-member-title">Non-Executive Director</p>
                 </div>
               </a>
 
