consent popup added

--- a/article.html
+++ b/article.html
@@ -295,6 +295,38 @@
       </div>
     </div>
 
+    <!-- Cookie Consent Popup -->
+    <div id="cookie-consent-popup" class="cookie-consent-popup">
+      <div class="cookie-consent-content">
+        <p>
+          Our website uses cookies to help us improve our services to you. To
+          stay informed about Equity Group Holdings Plc and its affiliates'
+          products, services, news, events and more, you consent to the use of
+          cookies by clicking 'I consent' button below to enable us to keep you
+          up to date.
+        </p>
+        <p>
+          You should read our
+          <a href="/privacy-policy">Data Privacy Policy</a> so you can
+          understand what type of cookies we use, the information we collect
+          using cookies and how that information is used.
+        </p>
+        <div class="cookie-consent-buttons">
+          <button
+            id="cookie-consent-button"
+            class="cookie-consent-btn flex items-center"
+          >
+            I Consent
+            <img
+              src="./assets/images/ei_arrow-up.png"
+              alt="ei_arrow-up"
+              class="ml-2"
+            />
+          </button>
+        </div>
+      </div>
+    </div>
+
     <!--Page Content-->
     <main>
       <div class="container py-10">
